@startuml

/'
    Diagramme de classe du jeu Splendor Duel
    Pour programmation objet C++
'/

class Joueur{
    - nom : string
    - score : int
    - jetons : Jetons
    - cartes : Carte
    - privilege : Privilege

    + getNbCouronnes() : int
    + getNbPrestige() : int
    + getPtsBonus() : int
}

class I_A {
}

class Physique {
}

class Partie {
    - joueur1 : Joueur
    - joueur2 : Joueur
    - espaceJeux : EspaceJeux
    - tour : int

    - finPartie() : bool
}

class EspaceJeux {
    + sac : Sac
    + pyramide : Pyramide
    + plateau : Plateau
}

class Sac{
    + remplirPlateau() : Plateau
}

class Pyramide {
    + reserverCarte()
    + acheterCarte()
}

class Carte{
    - cout : Jetons
    - bonus : Jetons
    - capacite : enum
    - nbCouronnes : int
    - nbPtsPrivilege : int
}

class Pioche {
    - pile_cartes : Carte
}

class Privilege {
    + utiliserPrivilege()
}

class Jetons {
    couleur : enum
}

class Plateau {
    - matriceJetons : Jetons
    - privilege : Privilege

    + remplirPlateau()
    + recupererJeton()
}

class Jeu {
    + lancer() : Partie
    + conditionsVictoire() : bool
}

class JeuDeCarte {
}

class LotJetons {
}

Physique *--- Joueur
I_A *--- Joueur

Carte *--- JeuDeCarte
Carte o-- Pyramide
Carte o-- Pioche
Carte o--- Joueur

Jetons *--- LotJetons
Jetons o-- Sac
Jetons o--- Joueur
Jetons o-- Plateau

Plateau o-- Privilege
Joueur o- Privilege

Partie *- EspaceJeux
Partie *- Joueur

EspaceJeux *-- Sac
EspaceJeux *-- Pyramide
EspaceJeux *-- Plateau

Jeu <-- Partie
@enduml